[tool.poetry]
name = "coding_problems"
version = "0.1.0"
description = ""
authors = ["keeeeei79 <keeeeei79@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
